--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,7 @@ dependencies {
 
     // Anko
     compile "org.jetbrains.anko:anko-commons:$ankoVersion"
+    compile "org.jetbrains.anko:anko-design:$ankoVersion"
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$architectureComponents"
