--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ ext {
     architectureComponents = "1.0.0"
     dagger = "2.14.1"
     retrofit = "2.3.0"
+    ankoVersion = "0.10.4"
 }
 
 
@@ -94,6 +95,10 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$dagger"
     implementation "com.google.dagger:dagger-android-support:$dagger"
     releaseImplementation 'com.faendir:acra:4.10.0'
+
+    // Anko
+    compile "org.jetbrains.anko:anko-commons:$ankoVersion"
+    compile "org.jetbrains.anko:anko-design:$ankoVersion"
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$architectureComponents"
