Update app name and remove no longer needed db upgrade schemas

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.duckduckgo.app"
+        applicationId "com.duckduckgo.mobile.android"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode buildVersionCode()
