Feature/improved bookmarks (#140)
* Add dialog for "add bookmark"

* Add "no bookmarks" text to bookmarks activity

* Add url to bookmark list; overflow menu for editing/deleting bookmarks

* Fix capatisation of title input field

* Change from deprecated Gradle command "compile" to "implementation"

* Add extra padding to the overflow menu button

* Fixing broken test

* Changing padding of bookmark recycler view items

* Formatting only

* Remove unnecessary comment

* Handle user removing the url scheme more gracefully

Show domain if available, or full url as a fallback if the url cannot be reliably established to be a url

* Remove nullability from method params on `addBookmark` function

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,8 +102,8 @@ dependencies {
     implementation "com.jakewharton.rxrelay2:rxrelay:2.0.0"
 
     // Anko
-    compile "org.jetbrains.anko:anko-commons:$ankoVersion"
-    compile "org.jetbrains.anko:anko-design:$ankoVersion"
+    implementation "org.jetbrains.anko:anko-commons:$ankoVersion"
+    implementation "org.jetbrains.anko:anko-design:$ankoVersion"
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$architectureComponents"
