--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82
 
-script: ./gradlew build connectedCheck
+script: ./gradlew build connectedCheck --info
 
 notifications:
   slack:
