--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,9 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82
 
-script: ./gradlew build
-script: ./gradlew connectedCheck --info
+script:
+  - ./gradlew build
+  - ./gradlew connectedCheck --info
 
 notifications:
   slack:
