Feature/ci optimisation (#184)
* Deliberate test fail with extra logging

* Split build and test commands so --info is applied on test only

Otherwise the logs are too verbose to be usable

* Fix travis command syntax

* Fix test which was deliberately failing

* Experimental test improvements

* Make use of test orchestrator optional (meant for CI use only really)

* Remove as of yet unused web server and multidex flag

* [WIP] Experimental attempt at providing alternative dagger modules

* Allow substitution of Dagger modules for `androidTest` tests

Sets up a few fake modules, to provide fake dependencies for things like JobScheduler and returns an in-memory DB for anything looking for a Room instance.

* Deliberate test failure with attempt at printing the test results

* Restore deliberately failing test

* Add improvements to failing test suite for better stability

Ensure the instant task executor rule is used, and allow queries on the main thread for the in-memory DB instance.

* Remove unnecessary @RunWith annotation

* Rename file to match the class name within

* Renaming test doubled classes to prefix on `Stub` rather than `Fake`

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,12 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82
 
-script: ./gradlew build connectedCheck
+script:
+  - ./gradlew build
+  - ./gradlew connectedCheck -Porchestrator --info
+
+after_failure:
+  - cat /home/travis/build/duckduckgo/Android/app/build/outputs/androidTest-results/connected/*
 
 notifications:
   slack:
