--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,6 @@
             android:name="com.duckduckgo.app.onboarding.ui.OnboardingActivity"
             android:label="@string/appName" />
 
-
         <activity
             android:name=".BrowserActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -66,6 +65,10 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name="com.duckduckgo.app.tabs.TabSwitcherActivity"
+            android:label="@string/tabActivityTitle" />
 
         <activity
             android:name="com.duckduckgo.app.privacy.ui.PrivacyDashboardActivity"
